chore(config): add cors plus pre-push hook